--- a/Solution (auto count).ipynb
+++ b/Solution (auto count).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -12,15 +12,17 @@
     "import cv2 \n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
-    "plt.rcParams[\"figure.figsize\"] = (10, 7)\n",
+    "# plt.rcParams[\"figure.figsize\"] = (10, 7)\n",
     "\n",
     "videofile = './Novgorod_2019-04-05-15_15_00.mp4'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "thres_bitwise = 5\n",
@@ -37,46 +39,56 @@
     "\n",
     "windows_cnt = [0,0,0,0]\n",
     "\n",
-    "windows_flags = [False, False, False, False]\n",
-    "\n",
-    "while cap.isOpened():\n",
+    "windows_flags = [False, False, False, False]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while True:\n",
     "    try:\n",
-    "        ret, frame = cap.read()    \n",
+    "        ret, frame = cap.read()\n",
+    "        if not ret:\n",
+    "            cv2.destroyAllWindows()\n",
+    "            out.release()\n",
+    "            break\n",
     "        frame = frame[1850:2800,1000:1100]\n",
-    "        \n",
+    "\n",
     "        if (cv2.bitwise_xor(frame[50:150], window1) > thres_bitwise)[:,:,0].sum() > thres_cnt:\n",
     "            if not windows_flags[0]:\n",
     "                windows_flags[0] = True\n",
     "                windows_cnt[0] += 1\n",
     "        else:\n",
     "            windows_flags[0] = False\n",
-    "            \n",
-    "            \n",
+    "\n",
+    "\n",
     "        if (cv2.bitwise_xor(frame[250:350], window2) > thres_bitwise)[:,:,0].sum() > thres_cnt:\n",
     "            if not windows_flags[1]:\n",
     "                windows_flags[1] = True\n",
     "                windows_cnt[1] += 1\n",
     "        else:\n",
     "            windows_flags[1] = False\n",
-    "            \n",
-    "            \n",
+    "\n",
+    "\n",
     "        if (cv2.bitwise_xor(frame[400:550], window3) > thres_bitwise)[:,:,0].sum() > thres_cnt:\n",
     "            if not windows_flags[2]:\n",
     "                windows_flags[2] = True\n",
     "                windows_cnt[2] += 1\n",
     "        else:\n",
     "            windows_flags[2] = False\n",
-    "            \n",
-    "            \n",
+    "\n",
+    "\n",
     "        if (cv2.bitwise_xor(frame[600:750], window4) > thres_bitwise)[:,:,0].sum() > thres_cnt:\n",
     "            if not windows_flags[3]:\n",
     "                windows_flags[3] = True\n",
     "                windows_cnt[3] += 1\n",
-    "                break\n",
     "        else:\n",
     "            windows_flags[3] = False\n",
-    "                \n",
-    "        \n",
+    "\n",
+    "\n",
     "        cv2.putText(frame, f\"count: {windows_cnt[0]}\", (10,100), cv2.FONT_HERSHEY_SIMPLEX, 0.5, (255,0,0), 2)\n",
     "        cv2.putText(frame, f\"count: {windows_cnt[1]}\", (10,300), cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0,255,0), 2)\n",
     "        cv2.putText(frame, f\"count: {windows_cnt[2]}\", (10,500), cv2.FONT_HERSHEY_SIMPLEX, 0.5, (255,0,255), 2)\n",
@@ -85,7 +97,7 @@
     "        cv2.rectangle(frame, (0,250), (100,350), (0,255,0), 2, 1)\n",
     "        cv2.rectangle(frame, (0,450), (100,550), (255,0,255), 2, 1)\n",
     "        cv2.rectangle(frame, (0,650), (100,750), (255,255,0), 2, 1)\n",
-    "        \n",
+    "\n",
     "        out.write(frame)\n",
     "        cv2.imshow('video', frame)\n",
     "        key = cv2.waitKey(1)\n",
@@ -93,7 +105,7 @@
     "            cv2.destroyAllWindows()\n",
     "            out.release()\n",
     "            break\n",
-    "    except Exception(e):\n",
+    "    except Exception as e:\n",
     "        print(e)\n",
     "        cv2.destroyAllWindows()\n",
     "        out.release()\n",
@@ -102,25 +114,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 195,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "out.release()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
